tests/compiletests/ui/lang/core/ref/member_ref_arg-broken.stderr
warning: `#[inline(never)]` function `member_ref_arg_broken::f` has been inlined
  --> $DIR/member_ref_arg-broken.rs:19:4
   |
LL | fn f(x: &u32) -> u32 {
   |    ^
   |
   = note: inlining was required due to illegal (pointer) argument
   = note: called from `member_ref_arg_broken::main`

warning: `#[inline(never)]` function `member_ref_arg_broken::g` has been inlined
  --> $DIR/member_ref_arg-broken.rs:24:4
   |
LL | fn g(xy: (&u32, &u32)) -> (u32, u32) {
   |    ^
   |
   = note: inlining was required due to illegal (pointer) argument
   = note: called from `member_ref_arg_broken::main`

warning: `#[inline(never)]` function `member_ref_arg_broken::h` has been inlined
  --> $DIR/member_ref_arg-broken.rs:29:4
   |
LL | fn h(xyz: (&u32, &u32, &u32)) -> (u32, u32, u32) {
   |    ^
   |
   = note: inlining was required due to illegal parameter type
   = note: called from `member_ref_arg_broken::main`

warning: `#[inline(never)]` function `member_ref_arg_broken::h_newtyped` has been inlined
  --> $DIR/member_ref_arg-broken.rs:40:4
   |
LL | fn h_newtyped(xyz: ((&u32, &u32, &u32),)) -> (u32, u32, u32) {
   |    ^^^^^^^^^^
   |
   = note: inlining was required due to illegal parameter type
   = note: called from `member_ref_arg_broken::main`

error: OpLoad cannot use pointer `%38` because it was produced by OpCompositeExtract
   |
   = note: in SPIR-V's logical addressing mode, pointers for OpLoad must come from specific instructions like OpVariable, OpAccessChain, or OpFunctionParameter
   = help: OpCompositeExtract cannot produce pointers valid for memory operations in logical addressing
   = note: generated SPIR-V:
                  %38 = OpCompositeExtract ...
               -> %39 = OpLoad %38 ...
   = note: module `$TEST_BUILD_DIR/lang/core/ref/member_ref_arg-broken`

error: aborting due to 1 previous error; 4 warnings emitted

